[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://assets/images/sprite_sheet.png" type="Texture" id=2]
[ext_resource path="res://assets/images/flame_particle.png" type="Texture" id=3]

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="TileSet" id=2]
0/name = "sprite_sheet.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="PhysicsMaterial" id=4]
bounce = 1.0

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 0.368921, 0.490709, 0.743652, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.44943, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
angular_velocity = 500.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale_curve = SubResource( 9 )
color_ramp = SubResource( 7 )
hue_variation = 0.42

[sub_resource type="Gradient" id=10]
colors = PoolColorArray( 0.82959, 0.294197, 0.116661, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 25.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
angular_velocity = 500.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale = 0.4
scale_curve = SubResource( 9 )
color_ramp = SubResource( 11 )
hue_variation = 0.23

[node name="Base" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 42, 0, 0, 43, 0, 0, 44, 0, 0, 45, 0, 0, 46, 0, 0, 47, 0, 0, 48, 0, 0, 49, 0, 0, 50, 0, 0, 51, 0, 0, 52, 0, 0, 53, 0, 0, 54, 0, 0, 55, 0, 0, 56, 0, 0, 57, 0, 0, 58, 0, 0, 59, 0, 0, 60, 0, 0, 61, 0, 0, 62, 0, 0, 63, 0, 0, 65536, 0, 0, 65544, 0, 0, 65567, 0, 0, 65599, 0, 0, 131072, 0, 0, 131103, 0, 0, 131135, 0, 0, 196608, 0, 0, 196639, 0, 0, 196671, 0, 0, 262144, 0, 0, 262175, 0, 0, 262207, 0, 0, 327680, 0, 0, 327688, 0, 0, 327711, 0, 0, 327743, 0, 0, 393216, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393247, 0, 0, 393279, 0, 0, 458752, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458783, 0, 0, 458815, 0, 0, 524288, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524319, 0, 0, 524351, 0, 0, 589824, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589855, 0, 0, 589887, 0, 0, 655360, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655391, 0, 0, 655423, 0, 0, 720896, 0, 0, 720913, 0, 0, 720914, 0, 0, 720927, 0, 0, 720959, 0, 0, 786432, 0, 0, 786449, 0, 0, 786450, 0, 0, 786463, 0, 0, 786495, 0, 0, 851968, 0, 0, 851985, 0, 0, 851986, 0, 0, 851999, 0, 0, 852031, 0, 0, 917504, 0, 0, 917535, 0, 0, 917567, 0, 0, 983040, 0, 0, 983071, 0, 0, 983103, 0, 0, 1048576, 0, 0, 1048607, 0, 0, 1048639, 0, 0, 1114112, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114143, 0, 0, 1114175, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0, 1179711, 0, 0, 1245184, 0, 0, 1245247, 0, 0, 1310720, 0, 0, 1310783, 0, 0, 1376256, 0, 0, 1376319, 0, 0, 1441792, 0, 0, 1441855, 0, 0, 1507328, 0, 0, 1507391, 0, 0, 1572864, 0, 0, 1572927, 0, 0, 1638400, 0, 0, 1638463, 0, 0, 1703936, 0, 0, 1703999, 0, 0, 1769472, 0, 0, 1769535, 0, 0, 1835008, 0, 0, 1835071, 0, 0, 1900544, 0, 0, 1900607, 0, 0, 1966080, 0, 0, 1966143, 0, 0, 2031616, 0, 0, 2031679, 0, 0, 2097152, 0, 0, 2097215, 0, 0, 2162688, 0, 0, 2162751, 0, 0, 2228224, 0, 0, 2228287, 0, 0, 2293760, 0, 0, 2293823, 0, 0, 2359296, 0, 0, 2359297, 0, 0, 2359298, 0, 0, 2359299, 0, 0, 2359300, 0, 0, 2359301, 0, 0, 2359302, 0, 0, 2359303, 0, 0, 2359304, 0, 0, 2359305, 0, 0, 2359306, 0, 0, 2359307, 0, 0, 2359308, 0, 0, 2359309, 0, 0, 2359310, 0, 0, 2359311, 0, 0, 2359312, 0, 0, 2359313, 0, 0, 2359314, 0, 0, 2359315, 0, 0, 2359316, 0, 0, 2359317, 0, 0, 2359318, 0, 0, 2359319, 0, 0, 2359320, 0, 0, 2359321, 0, 0, 2359322, 0, 0, 2359323, 0, 0, 2359324, 0, 0, 2359325, 0, 0, 2359326, 0, 0, 2359327, 0, 0, 2359328, 0, 0, 2359329, 0, 0, 2359330, 0, 0, 2359331, 0, 0, 2359332, 0, 0, 2359333, 0, 0, 2359334, 0, 0, 2359335, 0, 0, 2359336, 0, 0, 2359337, 0, 0, 2359338, 0, 0, 2359339, 0, 0, 2359340, 0, 0, 2359341, 0, 0, 2359342, 0, 0, 2359343, 0, 0, 2359344, 0, 0, 2359345, 0, 0, 2359346, 0, 0, 2359347, 0, 0, 2359348, 0, 0, 2359349, 0, 0, 2359350, 0, 0, 2359351, 0, 0, 2359352, 0, 0, 2359353, 0, 0, 2359354, 0, 0, 2359355, 0, 0, 2359356, 0, 0, 2359357, 0, 0, 2359358, 0, 0, 2359359, 0, 0, 2424832, 0, 0, 2424833, 0, 0, 2424834, 0, 0, 2424835, 0, 0, 2424836, 0, 0, 2424837, 0, 0, 2424838, 0, 0, 2424839, 0, 0, 2424840, 0, 0, 2424841, 0, 0, 2424842, 0, 0, 2424843, 0, 0, 2424844, 0, 0, 2424845, 0, 0, 2424846, 0, 0, 2424847, 0, 0, 2424848, 0, 0, 2424849, 0, 0, 2424850, 0, 0, 2424851, 0, 0, 2424852, 0, 0, 2424853, 0, 0, 2424854, 0, 0, 2424855, 0, 0, 2424856, 0, 0, 2424857, 0, 0, 2424858, 0, 0, 2424859, 0, 0, 2424860, 0, 0, 2424861, 0, 0, 2424862, 0, 0, 2424863, 0, 0, 2424864, 0, 0, 2424865, 0, 0, 2424866, 0, 0, 2424867, 0, 0, 2424868, 0, 0, 2424869, 0, 0, 2424870, 0, 0, 2424871, 0, 0, 2424872, 0, 0, 2424873, 0, 0, 2424874, 0, 0, 2424875, 0, 0, 2424876, 0, 0, 2424877, 0, 0, 2424878, 0, 0, 2424879, 0, 0, 2424880, 0, 0, 2424881, 0, 0, 2424882, 0, 0, 2424883, 0, 0, 2424884, 0, 0, 2424885, 0, 0, 2424886, 0, 0, 2424887, 0, 0, 2424888, 0, 0, 2424889, 0, 0, 2424890, 0, 0, 2424891, 0, 0, 2424892, 0, 0, 2424893, 0, 0, 2424894, 0, 0, 2424895, 0, 0 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]
position = Vector2( 422, 85 )
mass = 60.0
physics_material_override = SubResource( 4 )
gravity_scale = 0.0
linear_damp = 0.2
angular_damp = 2.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="RigidBody2D"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 16, 0, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource( 1 )

[node name="FlameParticlesLeft" type="Particles2D" parent="RigidBody2D"]
position = Vector2( -8, -4 )
z_index = -1
amount = 16
explosiveness = 0.01
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="FlameParticlesRight" type="Particles2D" parent="RigidBody2D"]
position = Vector2( -8, 4 )
z_index = -1
amount = 16
explosiveness = 0.01
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="FlameParticlesLeftSide" type="Particles2D" parent="RigidBody2D"]
position = Vector2( 0, -8 )
rotation = 1.5708
z_index = -1
amount = 16
explosiveness = 0.01
local_coords = false
process_material = SubResource( 12 )
texture = ExtResource( 3 )

[node name="FlameParticlesRightSide" type="Particles2D" parent="RigidBody2D"]
position = Vector2( 0, 8 )
rotation = -1.5708
z_index = -1
amount = 16
explosiveness = 0.01
local_coords = false
process_material = SubResource( 12 )
texture = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="RigidBody2D"]
current = true
zoom = Vector2( 0.5, 0.5 )

[connection signal="body_entered" from="RigidBody2D" to="RigidBody2D" method="_on_RigidBody2D_body_entered"]
